# rinha-compiler

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  environment.devenv.yml  tasks.py
compiler/: CMakeLists.txt  main.cpp
